[gd_scene load_steps=34 format=3 uid="uid://n87rw5cxnnn8"]

[ext_resource type="Script" path="res://src/Game/game.gd" id="1_ne6pe"]
[ext_resource type="Script" path="res://src/Game/game_root.gd" id="1_yidwt"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/input_handler.gd" id="2_4winb"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/main_game_input_handler.gd" id="3_08i3b"]
[ext_resource type="Script" path="res://src/Map/map.gd" id="3_xyl86"]
[ext_resource type="Script" path="res://src/Map/dungeon_generator.gd" id="4_15hgc"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/game_over_input_handler.gd" id="4_gxmdu"]
[ext_resource type="Script" path="res://src/Map/field_of_view.gd" id="5_bvmgb"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/history_viewer_input_handler.gd" id="5_hrkyq"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/base_input_handler.gd" id="6_ay8ab"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/overworld_input_handler.gd" id="8_62yq5"]
[ext_resource type="FontFile" uid="uid://bk0fq2awle8d5" path="res://assets/fonts/kenney_kenney-fonts/Fonts/Kenney Pixel.ttf" id="9_8xlja"]
[ext_resource type="Script" path="res://src/GUI/mouseover_checker.gd" id="9_eusf6"]
[ext_resource type="Script" path="res://src/GUI/hp_display.gd" id="9_njvq4"]
[ext_resource type="PackedScene" uid="uid://d36pgskfsvwj2" path="res://src/GUI/Reticle/reticle.tscn" id="11_n4t22"]
[ext_resource type="Script" path="res://src/GUI/message_log.gd" id="11_xxafc"]
[ext_resource type="Script" path="res://src/Map/world_generator.gd" id="13_4iv2r"]
[ext_resource type="Script" path="res://src/Map/map_data_service.gd" id="15_51jmh"]
[ext_resource type="Script" path="res://src/GUI/xp_display.gd" id="16_ckyac"]
[ext_resource type="Script" path="res://src/GUI/main_camera.gd" id="16_fatmi"]
[ext_resource type="Script" path="res://src/GUI/dungeon_floor_label.gd" id="16_j80u7"]
[ext_resource type="StyleBox" uid="uid://daeneodphwlvv" path="res://assets/resources/square_panel.tres" id="17_ykbop"]
[ext_resource type="Script" path="res://src/GUI/character_info_box.gd" id="17_yvib5"]
[ext_resource type="LabelSettings" uid="uid://dwo5wxa1b5g0g" path="res://assets/resources/message_label_settings.tres" id="20_vjk43"]
[ext_resource type="Script" path="res://src/GUI/overworld_tile_label.gd" id="21_yuqwt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oyudx"]
bg_color = Color(0.498039, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnwhi"]
bg_color = Color(0, 0.498039, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c11as"]
font = ExtResource("9_8xlja")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6v6h"]
bg_color = Color(0, 0, 0.498039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l7pum"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5eejl"]
font = ExtResource("9_8xlja")

[sub_resource type="LabelSettings" id="LabelSettings_wggql"]
font = ExtResource("9_8xlja")

[sub_resource type="LabelSettings" id="LabelSettings_sr2kr"]
font = ExtResource("9_8xlja")

[node name="InterfaceRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yidwt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/VBoxContainer/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(956, 536)
render_target_update_mode = 4

[node name="Game" type="Node2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
script = ExtResource("1_ne6pe")

[node name="InputHandler" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game"]
script = ExtResource("2_4winb")
start_input_handler = 1

[node name="MainGameInputHandler" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler" node_paths=PackedStringArray("reticle")]
script = ExtResource("3_08i3b")
reticle = NodePath("../../Map/Reticle")

[node name="GameOverInputHandler" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("4_gxmdu")

[node name="HistoryViewerInputHandler" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("5_hrkyq")
messages_panel_path = NodePath("../../../../../../MessagesPanel")
message_log_path = NodePath("../../../../../../MessagesPanel/MessageLog")

[node name="DummyInputHandler" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("6_ay8ab")

[node name="OverworldInputHandler" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler" node_paths=PackedStringArray("reticle")]
script = ExtResource("8_62yq5")
reticle = NodePath("../../Map/Reticle")

[node name="Map" type="Node2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game"]
script = ExtResource("3_xyl86")

[node name="DungeonGenerator" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("4_15hgc")

[node name="FieldOfView" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("5_bvmgb")

[node name="Tiles" type="Node2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]

[node name="Entities" type="Node2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]

[node name="MouseoverChecker" type="Node2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("9_eusf6")

[node name="Reticle" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map" instance=ExtResource("11_n4t22")]

[node name="WorldGenerator" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("13_4iv2r")

[node name="MapDataService" type="Node" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("15_51jmh")

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 1280
limit_bottom = 720
position_smoothing_enabled = true
script = ExtResource("16_fatmi")

[node name="InfoBar" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="StatsPanel" type="PanelContainer" parent="HBoxContainer/VBoxContainer/InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("17_ykbop")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel"]
layout_mode = 2

[node name="HpDisplay" type="MarginContainer" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
script = ExtResource("9_njvq4")

[node name="HpBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/HpDisplay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_oyudx")
theme_override_styles/fill = SubResource("StyleBoxFlat_jnwhi")
step = 1.0
value = 50.0
show_percentage = false

[node name="HpLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/HpDisplay"]
unique_name_in_owner = true
layout_mode = 2
text = "HP:30/30"
label_settings = SubResource("LabelSettings_c11as")
horizontal_alignment = 1
vertical_alignment = 1

[node name="XpDisplay" type="MarginContainer" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
script = ExtResource("16_ckyac")

[node name="XpBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/XpDisplay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_c6v6h")
theme_override_styles/fill = SubResource("StyleBoxFlat_l7pum")
step = 1.0
value = 50.0
show_percentage = false

[node name="XpLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/XpDisplay"]
unique_name_in_owner = true
layout_mode = 2
text = "XP:30/30"
label_settings = SubResource("LabelSettings_c11as")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterInfoBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("17_yvib5")

[node name="LevelLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/CharacterInfoBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "LVL: 1"
label_settings = SubResource("LabelSettings_5eejl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/CharacterInfoBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "LVL: 1"
label_settings = SubResource("LabelSettings_5eejl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefenseLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/CharacterInfoBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "LVL: 1"
label_settings = SubResource("LabelSettings_5eejl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OverworldTileLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Meadows"
label_settings = ExtResource("20_vjk43")
script = ExtResource("21_yuqwt")

[node name="DungeonFloorLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Dungeon Level: 1"
label_settings = SubResource("LabelSettings_wggql")
script = ExtResource("16_j80u7")

[node name="MouseoverLabel" type="Label" parent="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
label_settings = SubResource("LabelSettings_sr2kr")

[node name="MessagesPanel" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("17_ykbop")

[node name="MessageLog" type="ScrollContainer" parent="HBoxContainer/MessagesPanel"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("11_xxafc")

[node name="MessageList" type="VBoxContainer" parent="HBoxContainer/MessagesPanel/MessageLog"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="player_created" from="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game" to="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/HpDisplay" method="initialize"]
[connection signal="player_created" from="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game" to="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/XpDisplay" method="initialize"]
[connection signal="player_created" from="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game" to="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/CharacterInfoBox" method="setup"]
[connection signal="player_moved" from="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/InputHandler/OverworldInputHandler" to="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/OverworldTileLabel" method="set_overworld_tile_text"]
[connection signal="dungeon_floor_changed" from="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map" to="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/DungeonFloorLabel" method="set_dungeon_floor"]
[connection signal="entities_focussed" from="HBoxContainer/VBoxContainer/SubViewportContainer/SubViewport/Game/Map/MouseoverChecker" to="HBoxContainer/VBoxContainer/InfoBar/StatsPanel/VBoxContainer/MouseoverLabel" method="set_text"]
